--- a/Phonebook-backend/package.json
+++ b/Phonebook-backend/package.json
@@ -6,7 +6,11 @@
   "scripts": {
     "start": "node index.js",
     "dev": "nodemon index.js",
-    "test": "echo \\\"Error: no test specified\\\" && exit 1"
+    "test": "echo \\\"Error: no test specified\\\" && exit 1",
+    "build:ui": "(if exist build rmdir /s /q build ) && cd ../../FullStackOpen-2020/Part2/phonebook && npm run build --prod && xcopy /E build ../../../FullStackOpen2020-part3/Phonebook-backend/",
+    "deploy": "git push heroku master",
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "logs:prod": "heroku logs --tail"
   },
   "repository": {
     "type": "git",
