--- a/Phonebook-backend/package.json
+++ b/Phonebook-backend/package.json
@@ -9,7 +9,7 @@
     "test": "echo \\\"Error: no test specified\\\" && exit 1",
     "build:ui": "(if exist build rmdir /s /q build ) && cd ../../FullStackOpen-2020/Part2/phonebook && npm run build --prod && xcopy /E build ../../../FullStackOpen2020-part3/Phonebook-backend/",
     "deploy": "git push heroku master",
-    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",    
+    "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
     "logs:prod": "heroku logs --tail"
   },
   "repository": {
@@ -25,7 +25,9 @@
   "dependencies": {
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
+    "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "mongoose": "^5.9.9",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
