--- a/Phonebook-backend/package.json
+++ b/Phonebook-backend/package.json
@@ -10,7 +10,9 @@
     "build:ui": "(if exist build rmdir /s /q build ) && cd ../../FullStackOpen-2020/Part2/phonebook && npm run build --prod && xcopy /E build ../../../FullStackOpen2020-part3/Phonebook-backend/",
     "deploy": "git push heroku master",
     "deploy:full": "npm run build:ui && git add . && git commit -m uibuild && npm run deploy",
-    "logs:prod": "heroku logs --tail"
+    "logs:prod": "heroku logs --tail",
+    "lint": "eslint .",
+    "lintfix" : "eslint --fix ."
   },
   "repository": {
     "type": "git",
@@ -32,6 +34,12 @@
     "morgan": "^1.10.0"
   },
   "devDependencies": {
+    "eslint": "^6.8.0",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-plugin-import": "^2.20.1",
+    "eslint-plugin-jsx-a11y": "^6.2.3",
+    "eslint-plugin-react": "^7.19.0",
+    "eslint-plugin-react-hooks": "^2.5.0",
     "nodemon": "^2.0.3"
   }
 }
